--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ahmet Çetinkaya <ahmetcetinkaya0@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
