NodeMailer Helper Function

--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "express-async-handler": "^1.1.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
+    "nodemailer": "^6.4.6"
   }
 }
