--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.6"
+    "nodemailer": "^6.4.6",
+    "slugify": "^1.4.0"
   }
 }
